# Powergrid-Models

./: .gitattributes  .gitignore  .project  BLAZEGRAPH_IMPORT.md  README.md  build.ipynb  build_container.py  build_container.sh  ieee123_app_deconfliction_CIM100x.xml  pyproject.toml
8500_reduced_nodes/: Capacitors.dss  LineCodes2.DSS  Loads.dss  Master.dss  Transformers.dss
CIM/: .gitignore  CDPSM_RC1.docx  CDPSM_to_GLM.java  CIM_GridAPPS-D_RC4_2021.xsd  Drop_RC1.sql  IEEE13NodecktAssets_CDPSM_Combined.XML  IEEE13Nodeckt_CDPSM_Combined.XML  RC1.sql  SPARQLcimTest.java  glm.bat  glm.sh  glm_to_json.py  go.bat  go.sh  ieee13.xml  ieee13_assets.xml  ieee13_assets_base.glm  ieee13_assets_busxy.glm  ieee13_base.glm  ieee13_busxy.glm  ieee8500_base.glm  ieee8500_base.json  ieee8500_busxy.glm  ieee8500_run.glm  ieee8500_xy.json  oneline.xml  oneline_base.json  oneline_xy.json  setupMysqlDatabase.sh  showvolts.sh  xy_to_json.py  zipLoadSchedule.glm
DER/: DropDER.py  InsertDER.py  acep_psil_der_uuid.txt  config.txt  insert.sh  transactive123_der.txt  transactive123_der_uuid.txt
GLM/: IEEE_8500node.glm  IEEE_8500node_whouses_FBS.glm  IEEE_8500node_whouses_FBS_DR3.glm  Voltage_8500_GLD.xlsx  capacitor_state_DR0.csv  main_regulator_DR0.csv  regulator_taps_DR0.csv  wh_actual_load_DR0.csv  wh_rated_load_DR0.csv  wh_state_DR0.csv
Meas/: .gitignore  DropMeasurements.py  InsertMeasurements.py  Insert_OH_Conductors.py  ListFeeders.py  ListMeasureables.py  README.md  configfile.json  constants.py  dropall.bat  dropall.sh  ieee123_supplement.txt  ieee13nodeckt_measid.json  listall.sh  (+7 more)
(+776 files in other folders)
